...
              tabBarIcon: ({ color, size }) => <SolidIcon name="bar-chart-big" size={size} color={color} />,
            }}
          />
          <Tabs.Screen
            name="agent"
            options={{
              title: "Agent",
              headerLeft: () => <LogoIcon />,
              headerRight: () => <LibraryHeaderRight />,
              tabBarIcon: ({ color, size }) => <SolidIcon name="message-bubble-dots" size={size} color={color} />,
            }}
          />
          <Tabs.Screen
...
